# ch-ch-replicator

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  INITAL_PROMPT.md  README.md  docker-push.sh  package-lock.json
.gsd/workflows/features/260404-1-small-feature/: CONTEXT.md  PLAN.md  STATE.json  SUMMARY.md
.gsd/workflows/features/260404-2-small-feature/: STATE.json
.gsd/workflows/features/260404-3-small-feature/: STATE.json
.gsd/workflows/features/260404-4-i-want-a-feature-to-exclude-specified-co/: CONTEXT.md  PLAN.md  STATE.json  SUMMARY.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
src/: cdc.rs  checkpoint.rs  client.rs  config.rs  error.rs  main.rs  schema.rs  sync.rs
